<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OnScreen</string>
    <string name="server_url_title">Server URL</string>
    <string name="server_url_description">Enter the address of your OnScreen server</string>
    <string name="server_url_hint">http://192.168.1.100:7070</string>
    <string name="login_title">Sign In</string>
    <string name="login_description">Enter your OnScreen credentials</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="connect">Connect</string>
    <string name="continue_watching">Continue Watching</string>
    <string name="recently_added">Recently Added</string>
    <string name="collections">Collections</string>
    <string name="search_hint">Search movies, shows, music…</string>
    <string name="play">Play</string>
    <string name="resume">Resume from %s</string>
    <string name="play_from_beginning">Play from Beginning</string>
    <string name="error_connection">Could not connect to server</string>
    <string name="error_login">Login failed</string>
    <string name="no_results">No results found</string>
    <string name="episodes">Episodes</string>
    <string name="season_n">Season %d</string>
    <string name="audio">Audio</string>
    <string name="subtitles">Subtitles</string>
    <string name="off">Off</string>
    <string name="up_next">Up Next</string>
    <string name="play_now">Play Now</string>
    <string name="cancel">Cancel</string>
    <string name="default_track">Default</string>
    <string name="favorite">Favorite</string>
    <string name="unfavorite">Unfavorite</string>
    <string name="favorites">Favorites</string>
    <string name="history">History</string>
    <string name="notifications">Notifications</string>
    <string name="mark_all_read">Mark all read</string>
    <string name="no_notifications">No notifications yet</string>
    <string name="settings">Settings</string>
    <string name="language_preferences">Language Preferences</string>
    <string name="preferred_audio_language">Preferred audio language</string>
    <string name="preferred_subtitle_language">Preferred subtitle language</string>
    <string name="max_content_rating">Maximum content rating</string>
    <string name="account">Account</string>
    <string name="change_server">Change server</string>
    <string name="log_out">Log out</string>
    <string name="saved">Saved</string>
    <string name="browse">Browse</string>
    <string name="retry">Retry</string>
    <string name="confirm_log_out">Sign out of this device? You\'ll need to log in again to use OnScreen.</string>
    <string name="confirm_change_server">Disconnect from this server and choose another? You\'ll be signed out.</string>
    <string name="all_libraries">All libraries</string>
    <string name="search_in">Search in</string>
    <string name="content_restricted">This title is outside your content rating limit.</string>
    <string name="resume_watching">Resume?</string>
    <string name="resume_from">Resume from %s</string>
    <string name="start_over">Start over</string>
    <string name="unread">Unread</string>
</resources>
